--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <script src="./js/navbar.js" defer async></script>
+    <script src="./js/index.js" defer async></script>
+    <script src="./js/lib/anime.min.js"></script>
   </head>
   <body>
     <%- include('./components/navbar.ejs') %>
+    <div id="hero">
+      <h1 id="hero-title">
+        UF OPEN SOURCE CLUB
+      </h1>
+      <div id="tiles-wrapper"></div>
+    </div>
     <h1>Title: <%= page %></h1>
     <p>This is a placeholder for my website.</p>
     <%- include('./components/footer.ejs') %>
